<resources>
    <string name="app_name">MVP movies</string>
    <string name="main_text_view_popular">Popular</string>
    <string name="main_text_view_top_rated">Top rated</string>
    <string name="content_description_movie_post">Movie post</string>
    <string name="content_description_poster_detail">Poster detail</string>
    <string name="detail_tag_popularity">Popularity:</string>
    <string name="detail_tag_vote_count">Vote count:</string>
    <string name="detail_tag_vote_average">Vote average:</string>
    <string name="detail_button_add_to_favourite">detail_button_add_to_favourite</string>
    <string name="menu_favourite">Favourite</string>
    <string name="detail_videos">Videos</string>
    <string name="detail_reviews">Reviews</string>
    <string name="videos_not_found">Videos not found…</string>
    <string name="reviews_not_found">Reviews not found…</string>
    <string name="on_error_videos_empty">No videos yet…</string>
    <string name="on_videos_error_timeout">Low speed. Please check your internet connection…</string>
    <string name="on_videos_error_else">Something went wrong, try again…</string>
    <string name="on_error_reviews_empty">No reviews yet…</string>
    <string name="on_reviews_error_timeout">Low speed. Please check your internet connection…</string>
    <string name="on_reviews_error_else">Something went wrong. Please try again…</string>
</resources>